web-infras/parser/tests/fixtures/babel/core/uncategorised/477/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,35)
1|function hello() {'use strict'; --arguments; }
 |                                 ^
